# multi-modal-document-intelligence-system

./: README.md
docintel_phase1_cpu/docintel/: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  ci.yml  docker-compose.yml  project-structure.txt  pyproject.toml  requirements-phase2.txt  requirements-phase3.txt  requirements.txt  ui.html
docintel_phase1_cpu/docintel/app/: agent.py  api.py  orchestrator.py  schema.py  storage.py  tracing.py
docintel_phase1_cpu/docintel/config/: settings.py
docintel_phase1_cpu/docintel/docs/: phase2_colpali.md
docintel_phase1_cpu/docintel/embedding/: text.py  visual.py
docintel_phase1_cpu/docintel/evaluation/: harness.py
docintel_phase1_cpu/docintel/generation/: generator.py
docintel_phase1_cpu/docintel/indexing/: base.py  dense_qdrant.py  sparse_opensearch.py
docintel_phase1_cpu/docintel/ingestion/: ingest.py
docintel_phase1_cpu/docintel/parsing/: base.py  captioner.py  cpu_parser.py  docling_parser.py
docintel_phase1_cpu/docintel/reports/: run1.json
docintel_phase1_cpu/docintel/retrieval/: fusion.py  graph.py  reranker.py  retriever.py  router.py  visual_rerank.py
docintel_phase1_cpu/docintel/scripts/: quickstart.py  run_eval.py
docintel_phase1_cpu/docintel/tests/: test_fusion.py
mmenv/: pyvenv.cfg
