[project]
name = "docintel"
version = "0.1.0"
description = "Multi-modal document intelligence system — Phase 1 scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # --- Core schema & config ---
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",

    # --- Ingestion ---
    "pypdfium2>=4.30",
    "Pillow>=10.4",

    # --- Parsing ---
    # Docling is heavy (pulls torch). Pin a known-good version.
    "docling>=2.14,<3.0",

    # --- Embedding ---
    "FlagEmbedding>=1.3,<2.0",        # BGE-M3
    "numpy>=1.26,<3.0",
    "torch>=2.3,<3.0",                # required by FlagEmbedding + Docling

    # --- Indexing ---
    "qdrant-client>=1.11,<2.0",
    "opensearch-py>=2.6,<3.0",

    # --- Generation & VLM captioning ---
    "anthropic>=0.39,<1.0",

    # --- Orchestration / API (added in later phases) ---
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipython>=8.26",
]
phase2 = [
    # ColPali visual retrieval — added when you enable Track B
    "colpali-engine>=0.3",
    "transformers>=4.44",
    "accelerate>=0.33",
]
phase3 = [
    # Cross-encoder reranking
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "app", "config", "ingestion", "parsing",
    "embedding", "indexing", "retrieval", "generation",
    "evaluation",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
